# wayshot

./: Cargo.toml  README.md  codecov.yml  deny.toml  flake.nix
.github/workflows/: bench.yml  build.yml  deploy.yml  docs.yml  fmt-clippy.yml  nix.yml  test-coverage.yml
docs/: benchmarking.md  wayshot.1.scd  wayshot.7.scd
libwayshot/: Cargo.toml
libwayshot/benches/: capture.rs  image_ops.rs
libwayshot/examples/: waymirror.rs
libwayshot/src/: capture_backend.rs  dispatch.rs  egl.rs  error.rs  image_util.rs  lib.rs  output.rs  region.rs  screencast.rs  screencopy.rs  tests.rs  vulkan.rs
libwayshot/src/tests/: dispatch.rs  error.rs
nix/: INSTALL.md  module.nix  package.nix  shell.nix
waymirror-egl/: Cargo.toml
waymirror-egl/src/: state.rs
wayshot/: Cargo.toml
wayshot/src/: cli.rs  config.rs  listing.rs  logger.rs  screenshot.rs  settings.rs  tests.rs  utils.rs  wayshot.rs
