[package]
name = "libwayshot"
version = "0.3.2-dev"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
gbm = "0"
drm = "0"

gl = "0"
khronos-egl = { version = "6",features = ["static"]  }

image = { version = "0", default-features = false }
memmap2 = "0"
rustix = { version = "0", features = ["fs", "shm"] }
thiserror = "1"

wayland-client = "0"
wayland-protocols = { version = "0", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0", features = ["client"] }
wayland-backend = { version = "0", features = ["client_system"] }
