[package]
name = "libwayshot"
version = "0.7.3"
authors.workspace = true
description.workspace = true
keywords.workspace = true
license = "BSD-2-Clause"
repository.workspace = true
edition.workspace = true

[features]
default = ["png", "egl", "dmabuf", "wlr"]
png = ["image/png"]
jpeg = ["image/jpeg"]
qoi = ["image/qoi"]
webp = ["image/webp"]
avif = ["image/avif"]
egl = ["dep:gl", "dep:r-egl-wayland", "dmabuf"]
dmabuf = ["dep:gbm", "dep:drm"]
wlr = ["dep:wayland-protocols-wlr"]

[dependencies]
tracing.workspace = true
image.workspace = true
memmap2 = "0.9"
rustix = { workspace = true, features = ["fs", "shm"] }
thiserror.workspace = true

wayland-client.workspace = true
wayland-protocols = { workspace = true, features = [
	"client",
	"staging",
	"unstable",
] }
wayland-protocols-wlr = { version = "0.3", features = ["client"], optional = true }
wayland-backend = { version = "0.3", features = ["client_system"] }

gbm = { version = "0.18", optional = true }
drm = { version = "0.15", optional = true }

gl = { workspace = true, optional = true }
r-egl-wayland = { workspace = true, optional = true }
