[package]
name = "wayshot"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation = "https://docs.rs/crate/wayshot/latest"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
flate2 = "1"
eyre = "0"


[dependencies]
tracing.workspace = true

libwayshot.workspace = true

clap = { version = "4", features = ["derive"] }
tracing-subscriber = "0"

image = { version = "0", default-features = false, features = [
	"jpeg",
	"png",
	"pnm",
	"qoi",
	"webp",
] }

dialoguer = { version = "0", features = ["fuzzy-select"] }
eyre = "0"
chrono = "0"

wl-clipboard-rs = "0"
nix = { version = "0", features = ["process"] }
toml = { version = "0", default-features = false, features = ["parse"] }
serde = { version = "1", features = ["derive"] }
dirs = "5"
shellexpand = "3"

[[bin]]
name = "wayshot"
path = "src/wayshot.rs"
